include/X11/Xlib.h

#define XlibSpecificationRelease 6
extern int
_Xmblen(
#ifdef ISC
#define X_HAVE_UTF8_STRING 1
typedef char *XPointer;
#define True 1
#define False 0
#define QueuedAlready 0
#define QueuedAfterReading 1
#define QueuedAfterFlush 2
typedef struct _XExtData {
	int number;		
	struct _XExtData *next;	
	int (*free_private)(	
	struct _XExtData *extension
	);
	XPointer private_data;	
} XExtData;
typedef struct {		
	int extension;		
	int major_opcode;	
	int first_event;	
	int first_error;	
} XExtCodes;
typedef struct {
    int depth;
    int bits_per_pixel;
    int scanline_pad;
} XPixmapFormatValues;
typedef struct {
	int function;		
	unsigned long plane_mask;
	unsigned long foreground;
	unsigned long background;
	int line_width;		
	int line_style;	 	
	int cap_style;	  	
	int join_style;	 	
	int fill_style;	 	
	int fill_rule;	  	
	int arc_mode;		
	Pixmap tile;		
	Pixmap stipple;		
	int ts_x_origin;	
	int ts_y_origin;
        Font font;	        
	int subwindow_mode;     
	Bool graphics_exposures;
	int clip_x_origin;	
	int clip_y_origin;
	Pixmap clip_mask;	
	int dash_offset;	
	char dashes;
} XGCValues;
*GC;
typedef struct {
	XExtData *ext_data;	
	VisualID visualid;	
#if defined(__cplusplus) || defined(c_plusplus)
	int c_class;		
#else
	int class;		
#endif
	unsigned long red_mask, green_mask, blue_mask;	
	int bits_per_rgb;	
	int map_entries;	
} Visual;
typedef struct {
	int depth;		
	int nvisuals;		
	Visual *visuals;	
} Depth;
struct _XDisplay;		
typedef struct {
	XExtData *ext_data;	
	struct _XDisplay *display;
	Window root;		
	int width, height;	
	int mwidth, mheight;	
	int ndepths;		
	Depth *depths;		
	int root_depth;		
	Visual *root_visual;	
	GC default_gc;		
	Colormap cmap;		
	unsigned long white_pixel;
	unsigned long black_pixel;	
	int max_maps, min_maps;	
	int backing_store;	
	Bool save_unders;
	long root_input_mask;	
} Screen;
typedef struct {
	XExtData *ext_data;	
	int depth;		
	int bits_per_pixel;	
	int scanline_pad;	
} ScreenFormat;
typedef struct {
    Pixmap background_pixmap;	
    unsigned long background_pixel;	
    Pixmap border_pixmap;	
    unsigned long border_pixel;	
    int bit_gravity;		
    int win_gravity;		
    int backing_store;		
    unsigned long backing_planes;
    unsigned long backing_pixel;
    Bool save_under;		
    long event_mask;		
    long do_not_propagate_mask;	
    Bool override_redirect;	
    Colormap colormap;		
    Cursor cursor;		
} XSetWindowAttributes;
typedef struct {
    int x, y;			
    int width, height;		
    int border_width;		
    int depth;          	
    Visual *visual;		
    Window root;        	
#if defined(__cplusplus) || defined(c_plusplus)
    int c_class;		
#else
    int class;			
#endif
    int bit_gravity;		
    int win_gravity;		
    int backing_store;		
    unsigned long backing_planes;
    unsigned long backing_pixel;
    Bool save_under;		
    Colormap colormap;		
    Bool map_installed;		
    int map_state;		
    long all_event_masks;	
    long your_event_mask;	
    long do_not_propagate_mask; 
    Bool override_redirect;	
    Screen *screen;		
} XWindowAttributes;
typedef struct {
	int family;		
	int length;		
	char *address;		
} XHostAddress;
typedef struct {
	int typelength;		
	int valuelength;	
	char *type;		
	char *value;		
} XServerInterpretedAddress;
typedef struct _XImage {
    int width, height;		
    int xoffset;		
    int format;			
    char *data;			
    int byte_order;		
    int bitmap_unit;		
    int bitmap_bit_order;	
    int bitmap_pad;		
    int depth;			
    int bytes_per_line;		
    int bits_per_pixel;		
    unsigned long red_mask;	
    unsigned long green_mask;
    unsigned long blue_mask;
    XPointer obdata;		
    struct funcs {		
	struct _XImage *(*create_image)(
		struct _XDisplay* ,
		Visual*		,
		unsigned int	,
		int		,
		int		,
		char*		,
		unsigned int	,
		unsigned int	,
		int		,
		int		);
	int (*destroy_image)        (struct _XImage *);
	unsigned long (*get_pixel)  (struct _XImage *, int, int);
	int (*put_pixel)            (struct _XImage *, int, int, unsigned long);
	struct _XImage *(*sub_image)(struct _XImage *, int, int, unsigned int, unsigned int);
	int (*add_pixel)            (struct _XImage *, long);
	} f;
} XImage;
typedef struct {
    int x, y;
    int width, height;
    int border_width;
    Window sibling;
    int stack_mode;
} XWindowChanges;
typedef struct {
	unsigned long pixel;
	unsigned short red, green, blue;
	char flags;  
	char pad;
} XColor;
typedef struct {
    short x1, y1, x2, y2;
} XSegment;
typedef struct {
    short x, y;
} XPoint;
typedef struct {
    short x, y;
    unsigned short width, height;
} XRectangle;
typedef struct {
    short x, y;
    unsigned short width, height;
    short angle1, angle2;
} XArc;
typedef struct {
        int key_click_percent;
        int bell_percent;
        int bell_pitch;
        int bell_duration;
        int led;
        int led_mode;
        int key;
        int auto_repeat_mode;   
} XKeyboardControl;
typedef struct {
        int key_click_percent;
	int bell_percent;
	unsigned int bell_pitch, bell_duration;
	unsigned long led_mask;
	int global_auto_repeat;
	char auto_repeats[32];
} XKeyboardState;
typedef struct {
        Time time;
	short x, y;
} XTimeCoord;
typedef struct {
 	int max_keypermod;	
 	KeyCode *modifiermap;	
} XModifierKeymap;
typedef struct _XDisplay Display;
struct _XPrivate;		
struct _XrmHashBucketRec;
*_XPrivDisplay;
typedef struct {
	int type;		
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;	        
	Window root;	        
	Window subwindow;	
	Time time;		
	int x, y;		
	int x_root, y_root;	
	unsigned int state;	
	unsigned int keycode;	
	Bool same_screen;	
} XKeyEvent;
typedef XKeyEvent XKeyPressedEvent;
typedef XKeyEvent XKeyReleasedEvent;
typedef struct {
	int type;		
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;	        
	Window root;	        
	Window subwindow;	
	Time time;		
	int x, y;		
	int x_root, y_root;	
	unsigned int state;	
	unsigned int button;	
	Bool same_screen;	
} XButtonEvent;
typedef XButtonEvent XButtonPressedEvent;
typedef XButtonEvent XButtonReleasedEvent;
typedef struct {
	int type;		
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;	        
	Window root;	        
	Window subwindow;	
	Time time;		
	int x, y;		
	int x_root, y_root;	
	unsigned int state;	
	char is_hint;		
	Bool same_screen;	
} XMotionEvent;
typedef XMotionEvent XPointerMovedEvent;
typedef struct {
	int type;		
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;	        
	Window root;	        
	Window subwindow;	
	Time time;		
	int x, y;		
	int x_root, y_root;	
	int mode;		
	int detail;
	Bool same_screen;	
	Bool focus;		
	unsigned int state;	
} XCrossingEvent;
typedef XCrossingEvent XEnterWindowEvent;
typedef XCrossingEvent XLeaveWindowEvent;
typedef struct {
	int type;		
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;		
	int mode;		
	int detail;
} XFocusChangeEvent;
typedef XFocusChangeEvent XFocusInEvent;
typedef XFocusChangeEvent XFocusOutEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;
	char key_vector[32];
} XKeymapEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;
	int x, y;
	int width, height;
	int count;		
} XExposeEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Drawable drawable;
	int x, y;
	int width, height;
	int count;		
	int major_code;		
	int minor_code;		
} XGraphicsExposeEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Drawable drawable;
	int major_code;		
	int minor_code;		
} XNoExposeEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;
	int state;		
} XVisibilityEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window parent;		
	Window window;		
	int x, y;		
	int width, height;	
	int border_width;	
	Bool override_redirect;	
} XCreateWindowEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window event;
	Window window;
} XDestroyWindowEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window event;
	Window window;
	Bool from_configure;
} XUnmapEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window event;
	Window window;
	Bool override_redirect;	
} XMapEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window parent;
	Window window;
} XMapRequestEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window event;
	Window window;
	Window parent;
	int x, y;
	Bool override_redirect;
} XReparentEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window event;
	Window window;
	int x, y;
	int width, height;
	int border_width;
	Window above;
	Bool override_redirect;
} XConfigureEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window event;
	Window window;
	int x, y;
} XGravityEvent;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;
	int width, height;
} XResizeRequestEvent;
typedef struct {		
    unsigned char byte1;
    unsigned char byte2;
}
#if defined(__GNUC__) && defined(__arm__) && !defined(__ARM_EABI__)