inc/X11/Xlib.bi

''
''
'' Xlib -- header translated with help of SWIG FB wrapper
''
'' NOTICE: This file is part of the FreeBASIC Compiler package and can't
''         be included in other distributions without authorization.
''
''
#ifndef __Xlib_bi__
#define __Xlib_bi__

#define XlibSpecificationRelease 6

declare function _Xmblen cdecl alias "_Xmblen" (byval str as zstring ptr, byval len as integer) as integer

#define X_HAVE_UTF8_STRING 1

type XPointer as byte ptr

#define True 1
#define False 0
#define QueuedAlready 0
#define QueuedAfterReading 1
#define QueuedAfterFlush 2

type _XExtData
	number as integer
	next as _XExtData ptr
	free_private as function cdecl(byval as _XExtData ptr) as integer
	private_data as XPointer
end type

type XExtData as _XExtData

type XExtCodes
	extension as integer
	major_opcode as integer
	first_event as integer
	first_error as integer
end type

type XPixmapFormatValues
	depth as integer
	bits_per_pixel as integer
	scanline_pad as integer
end type

type XGCValues
	function as integer
	plane_mask as uinteger
	foreground as uinteger
	background as uinteger
	line_width as integer
	line_style as integer
	cap_style as integer
	join_style as integer
	fill_style as integer
	fill_rule as integer
	arc_mode as integer
	tile as Pixmap
	stipple as Pixmap
	ts_x_origin as integer
	ts_y_origin as integer
	font as Font
	subwindow_mode as integer
	graphics_exposures as integer
	clip_x_origin as integer
	clip_y_origin as integer
	clip_mask as Pixmap
	dash_offset as integer
	dashes as byte
end type

type GC as _XGC ptr

type Visual
	ext_data as XExtData ptr
	visualid as VisualID
	class as integer
	red_mask as uinteger
	green_mask as uinteger
	blue_mask as uinteger
	bits_per_rgb as integer
	map_entries as integer
end type

type Depth
	depth as integer
	nvisuals as integer
	visuals as Visual ptr
end type

type Screen
	ext_data as XExtData ptr
	display as _XDisplay ptr
	root as Window
	width as integer
	height as integer
	mwidth as integer
	mheight as integer
	ndepths as integer
	depths as Depth ptr
	root_depth as integer
	root_visual as Visual ptr
	default_gc as GC
	cmap as Colormap
	white_pixel as uinteger
	black_pixel as uinteger
	max_maps as integer
	min_maps as integer
	backing_store as integer
	save_unders as integer
	root_input_mask as integer
end type

type ScreenFormat
	ext_data as XExtData ptr
	depth as integer
	bits_per_pixel as integer
	scanline_pad as integer
end type

type XSetWindowAttributes
	background_pixmap as Pixmap
	background_pixel as uinteger
	border_pixmap as Pixmap
	border_pixel as uinteger
	bit_gravity as integer
	win_gravity as integer
	backing_store as integer
	backing_planes as uinteger
	backing_pixel as uinteger
	save_under as integer
	event_mask as integer
	do_not_propagate_mask as integer
	override_redirect as integer
	colormap as Colormap
	cursor as Cursor
end type

type XWindowAttributes
	x as integer
	y as integer
	width as integer
	height as integer
	border_width as integer
	depth as integer
	visual as Visual ptr
	root as Window
	class as integer
	bit_gravity as integer
	win_gravity as integer
	backing_store as integer
	backing_planes as uinteger
	backing_pixel as uinteger
	save_under as integer
	colormap as Colormap
	map_installed as integer
	map_state as integer
	all_event_masks as integer
	your_event_mask as integer
	do_not_propagate_mask as integer
	override_redirect as integer
	screen as Screen ptr
end type

type XHostAddress
	family as integer
	length as integer
	address as zstring ptr
end type

type XServerInterpretedAddress
	typelength as integer
	valuelength as integer
	type as zstring ptr
	value as zstring ptr
end type

type _XImage
	width as integer
	height as integer
	xoffset as integer
	format as integer
	data as zstring ptr
	byte_order as integer
	bitmap_unit as integer
	bitmap_bit_order as integer
	bitmap_pad as integer
	depth as integer
	bytes_per_line as integer
	bits_per_pixel as integer
	red_mask as uinteger
	green_mask as uinteger
	blue_mask as uinteger
	obdata as XPointer
	f as XImage__NESTED__f
end type

type XImage as _XImage

type XImage__NESTED__f
	create_image as function cdecl(byval as _XDisplay ptr, byval as Visual ptr, byval as uinteger, byval as integer, byval as integer, byval as zstring ptr, byval as uinteger, byval as uinteger, byval as integer, byval as integer) as _XImage ptr
	destroy_image as function cdecl(byval as _XImage ptr) as integer
	get_pixel as function cdecl(byval as _XImage ptr, byval as integer, byval as integer) as uinteger
	put_pixel as function cdecl(byval as _XImage ptr, byval as integer, byval as integer, byval as uinteger) as integer
	sub_image as function cdecl(byval as _XImage ptr, byval as integer, byval as integer, byval as uinteger, byval as uinteger) as _XImage ptr
	add_pixel as function cdecl(byval as _XImage ptr, byval as integer) as integer
end type

type XWindowChanges
	x as integer
	y as integer
	width as integer
	height as integer
	border_width as integer
	sibling as Window
	stack_mode as integer
end type

type XColor
	pixel as uinteger
	red as ushort
	green as ushort
	blue as ushort
	flags as byte
	pad as byte
end type

type XSegment
	x1 as short
	y1 as short
	x2 as short
	y2 as short
end type

type XPoint
	x as short
	y as short
end type

type XRectangle
	x as short
	y as short
	width as ushort
	height as ushort
end type

type XArc
	x as short
	y as short
	width as ushort
	height as ushort
	angle1 as short
	angle2 as short
end type

type XKeyboardControl
	key_click_percent as integer
	bell_percent as integer
	bell_pitch as integer
	bell_duration as integer
	led as integer
	led_mode as integer
	key as integer
	auto_repeat_mode as integer
end type

type XKeyboardState
	key_click_percent as integer
	bell_percent as integer
	bell_pitch as uinteger
	bell_duration as uinteger
	led_mask as uinteger
	global_auto_repeat as integer
	auto_repeats as zstring * 32
end type

type XTimeCoord
	time as Time
	x as short
	y as short
end type

type XModifierKeymap
	max_keypermod as integer
	modifiermap as KeyCode ptr
end type

type Display as _XDisplay

type 
	ext_data as XExtData ptr
	private1 as _XPrivate ptr
	fd as integer
	private2 as integer
	proto_major_version as integer
	proto_minor_version as integer
	vendor as zstring ptr
	private3 as XID
	private4 as XID
	private5 as XID
	private6 as integer
	resource_alloc as function cdecl(byval as _XDisplay ptr) as XID
	byte_order as integer
	bitmap_unit as integer
	bitmap_pad as integer
	bitmap_bit_order as integer
	nformats as integer
	pixmap_format as ScreenFormat ptr
	private8 as integer
	release as integer
	private9 as _XPrivate ptr
	private10 as _XPrivate ptr
	qlen as integer
	last_request_read as uinteger
	request as uinteger
	private11 as XPointer
	private12 as XPointer
	private13 as XPointer
	private14 as XPointer
	max_request_size as uinteger
	db as _XrmHashBucketRec ptr
	private15 as function cdecl(byval as _XDisplay ptr) as integer
	display_name as zstring ptr
	default_screen as integer
	nscreens as integer
	screens as Screen ptr
	motion_buffer as uinteger
	private16 as uinteger
	min_keycode as integer
	max_keycode as integer
	private17 as XPointer
	private18 as XPointer
	private19 as integer
	xdefaults as zstring ptr
end type

type _XPrivDisplay as XModifierKeymap ptr

type XKeyEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	root as Window
	subwindow as Window
	time as Time
	x as integer
	y as integer
	x_root as integer
	y_root as integer
	state as uinteger
	keycode as uinteger
	same_screen as integer
end type

type XKeyPressedEvent as XKeyEvent
type XKeyReleasedEvent as XKeyEvent

type XButtonEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	root as Window
	subwindow as Window
	time as Time
	x as integer
	y as integer
	x_root as integer
	y_root as integer
	state as uinteger
	button as uinteger
	same_screen as integer
end type

type XButtonPressedEvent as XButtonEvent
type XButtonReleasedEvent as XButtonEvent

type XMotionEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	root as Window
	subwindow as Window
	time as Time
	x as integer
	y as integer
	x_root as integer
	y_root as integer
	state as uinteger
	is_hint as byte
	same_screen as integer
end type

type XPointerMovedEvent as XMotionEvent

type XCrossingEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	root as Window
	subwindow as Window
	time as Time
	x as integer
	y as integer
	x_root as integer
	y_root as integer
	mode as integer
	detail as integer
	same_screen as integer
	focus as integer
	state as uinteger
end type

type XEnterWindowEvent as XCrossingEvent
type XLeaveWindowEvent as XCrossingEvent

type XFocusChangeEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	mode as integer
	detail as integer
end type

type XFocusInEvent as XFocusChangeEvent
type XFocusOutEvent as XFocusChangeEvent

type XKeymapEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	key_vector as zstring * 32
end type

type XExposeEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	x as integer
	y as integer
	width as integer
	height as integer
	count as integer
end type

type XGraphicsExposeEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	drawable as Drawable
	x as integer
	y as integer
	width as integer
	height as integer
	count as integer
	major_code as integer
	minor_code as integer
end type

type XNoExposeEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	drawable as Drawable
	major_code as integer
	minor_code as integer
end type

type XVisibilityEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	state as integer
end type

type XCreateWindowEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	parent as Window
	window as Window
	x as integer
	y as integer
	width as integer
	height as integer
	border_width as integer
	override_redirect as integer
end type

type XDestroyWindowEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	event as Window
	window as Window
end type

type XUnmapEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	event as Window
	window as Window
	from_configure as integer
end type

type XMapEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	event as Window
	window as Window
	override_redirect as integer
end type

type XMapRequestEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	parent as Window
	window as Window
end type

type XReparentEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	event as Window
	window as Window
	parent as Window
	x as integer
	y as integer
	override_redirect as integer
end type

type XConfigureEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	event as Window
	window as Window
	x as integer
	y as integer
	width as integer
	height as integer
	border_width as integer
	above as Window
	override_redirect as integer
end type

type XGravityEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	event as Window
	window as Window
	x as integer
	y as integer
end type

type XResizeRequestEvent
	type as integer
	serial as uinteger
	send_event as integer
	display as Display ptr
	window as Window
	width as integer
	height as integer
end type
